--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,38 +1,19 @@
-
-html, body, div, span, h1, h2, h3, h4, h6, p, a, img, i, center, ul, li, header, nav, section, footer {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-}
-
-ul, li {
+ul,
+li {
   padding: 0;
   margin: 0;
   list-style: none;
-  
-}
-
-header, nav, section, footer {
-  display: block;
-}
-
-* {
-  box-sizing: border-box;
-  border-radius: 50px;
-}
-
-html, body {
-  font-family: 'Poppins', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
   text-decoration: none !important;
 }
 
-h1, h2, h3, h4, h6 {
+h1,
+h2,
+h3,
+h4,
+h6 {
   color: #1e1e1e;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -54,6 +35,33 @@ img {
   overflow: hidden;
 }
 
+.search-input {
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  width: auto;
+  margin-bottom: 9px;
+}
+
+.search-input input {
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 40px;
+  width: 300px;
+}
+
+.search-input button {
+  align-items: center;
+  height: 40px;
+  line-height: 40px;
+  width: auto;
+  margin-top: 9px;
+}
+
+.search-input button:hover {
+  background: #0071f8;
+}
+
 /* 
 ---------------------------------------------
 Global Styles
@@ -61,17 +69,7 @@ Global Styles
 */
 html,
 body {
-  font-family: 'Poppins', sans-serif;
-}
-
-::selection {
-  background: #0071f8;
-  color: #fff;
-}
-
-::-moz-selection {
-  background: #0071f8;
-  color: #fff;
+  font-family: "Poppins", sans-serif;
 }
 
 .section {
@@ -97,8 +95,6 @@ body {
   font-weight: 700;
 }
 
-
-
 /* 
 ---------------------------------------------
 Header Style
@@ -108,16 +104,12 @@ Header Style
 .background-header {
   background-color: #0071f8 !important;
   border-radius: 0px 0px 25px 25px;
-  height: 80px!important;
-  position: fixed!important;
-  top: 0!important;
+  height: 80px !important;
+  position: fixed !important;
+  top: 0 !important;
   left: 0;
   right: 0;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.15)!important;
-  -webkit-transition: all .5s ease 0s;
-  -moz-transition: all .5s ease 0s;
-  -o-transition: all .5s ease 0s;
-  transition: all .5s ease 0s;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15) !important;
 }
 
 .background-header .logo img {
@@ -126,28 +118,19 @@ Header Style
 
 .header-area {
   position: absolute;
-  background-color: transparent;
   top: 40px;
   left: 0;
   right: 0;
   z-index: 100;
-  -webkit-transition: all .5s ease 0s;
-  -moz-transition: all .5s ease 0s;
-  -o-transition: all .5s ease 0s;
-  transition: all .5s ease 0s;
 }
 
 .header-area .main-nav {
-  background: transparent;
   display: flex;
 }
 
 .header-area .main-nav .logo {
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
   display: inline-block;
+  margin-right: 100px;
 }
 
 .header-area .main-nav .logo h1 {
@@ -160,25 +143,19 @@ Header Style
   border-right: 1px solid rgba(250, 250, 250, 0.3);
 }
 
-.background-header .main-nav .logo{
+.background-header .main-nav .logo {
   margin-top: 18px;
 }
 
 .header-area .main-nav ul.nav {
-  display: flex;           
-  align-items: center;       
-  justify-content: flex-end;  
+  display: flex;
+  justify-content: flex-end;
   border-radius: 0px 0px 25px 25px;
   flex-basis: 100%;
   margin-top: 10px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
   position: relative;
   z-index: 999;
 }
-
 
 .header-area .main-nav .nav li:last-child {
   padding-right: 0px;
@@ -198,16 +175,9 @@ Header Style
   border-radius: 20px;
   font-weight: 300;
   font-size: 15px;
-  height: 40px;
-  line-height: 40px;
   text-transform: capitalize;
   color: #fff;
-  -webkit-transition: all 0.4s ease 0s;
-  -moz-transition: all 0.4s ease 0s;
-  -o-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
-  border: transparent;
-  letter-spacing: .25px;
+  letter-spacing: 0.25px;
 }
 
 .header-area .main-nav .nav li:last-child a {
@@ -217,230 +187,19 @@ Header Style
 }
 
 .header-area .main-nav .nav li:last-child:hover a {
-  background-color: #ee626b;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .header-area .main-nav .nav li:hover a {
-  background-color: rgba(255, 255, 255, 0.10);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .header-area .main-nav .nav li a.active {
   color: #fff;
-  background-color: rgba(255, 255, 255, 0.10);
-}
-
-.background-header .main-nav .nav li a.active {
-  color: #fff;
-  background-color: rgba(255, 255, 255, 0.10);
-}
-
-.header-area .main-nav .menu-trigger {
-  cursor: pointer;
-  position: absolute;
-  top: 33px;
-  width: 32px;
-  height: 40px;
-  text-indent: -9999em;
-  z-index: 99;
-  right: 20px;
-  display: none;
-}
-
-.background-header .main-nav .menu-trigger {
-  top: 22px;
-}
-
-.background-header .main-nav ul.nav {
-  margin-top: 20px;
-}
-
-
-.header-area .main-nav .menu-trigger span:before,
-.header-area .main-nav .menu-trigger span:after {
-  -moz-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-  background-color: #fff;
-  display: block;
-  position: absolute;
-  width: 30px;
-  height: 2px;
-  left: 0;
-  width: 75%;
-}
-
-.header-area .main-nav .menu-trigger span:before,
-.header-area .main-nav .menu-trigger span:after {
-  content: "";
-}
-
-.header-area .main-nav .menu-trigger span {
-  top: 16px;
-}
-
-.header-area .main-nav .menu-trigger span:before {
-  -moz-transform-origin: 33% 100%;
-  -ms-transform-origin: 33% 100%;
-  -webkit-transform-origin: 33% 100%;
-  transform-origin: 33% 100%;
-  top: -10px;
-  z-index: 10;
-}
-
-.header-area .main-nav .menu-trigger span:after {
-  -moz-transform-origin: 33% 0;
-  -ms-transform-origin: 33% 0;
-  -webkit-transform-origin: 33% 0;
-  transform-origin: 33% 0;
-  top: 10px;
-}
-
-.header-area .main-nav .menu-trigger.active span,
-.header-area .main-nav .menu-trigger.active span:before,
-.header-area .main-nav .menu-trigger.active span:after {
-  background-color: transparent;
-  width: 100%;
-}
-
-.header-area .main-nav .menu-trigger.active span:before {
-  -moz-transform: translateY(6px) translateX(1px) rotate(45deg);
-  -ms-transform: translateY(6px) translateX(1px) rotate(45deg);
-  -webkit-transform: translateY(6px) translateX(1px) rotate(45deg);
-  transform: translateY(6px) translateX(1px) rotate(45deg);
-  background-color: #fff;
-}
-
-.background-header .main-nav .menu-trigger.active span:before {
-  background-color: #fff;
-}
-
-.header-area .main-nav .menu-trigger.active span:after {
-  -moz-transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  -ms-transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  -webkit-transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  background-color: #fff;
-}
-
-.background-header .main-nav .menu-trigger.active span:after {
-  background-color: #fff;
-}
-
-.header-area.header-sticky .nav li a.active {
-  color: #fff;
-}
-
-.visible{
-  display:inline !important;
-}
-
-@media (max-width: 1200px) {
-  .header-area .main-nav .nav li {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 @media (max-width: 767px) {
-  .background-header .main-nav {
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
-    border-radius: 0px 0px 25px 25px;
-    width: 100%;
-  }
-  .background-header .main-nav .nav,
-  .header-area .main-nav .nav {
-    background-color: #fff;
-  }
-  .background-header .main-nav .nav li a,
-  .header-area .main-nav .nav li a {
-    line-height: 50px;
-    height: 50px;
-    font-weight: 400;
-    color: #1e1e1e;
-    background-color: #fff;
-     border-radius: 0px 0px 25px 25px;
-  }
-  .background-header .main-nav .nav li,
-  .header-area .main-nav .nav li {
-    border-top: 1px solid #ddd;
-    background-color: #f1f0fe;
-    height: 50px;
-    border-radius: 0px 0px 25px 25px;
-  }
-  .background-header .main-nav .nav li:last-child,
-  .header-area .main-nav .nav li:last-child {
-    border-radius: 0px 0px 25px 25px;
-  }
-  .header-area .main-nav .nav {
-    height: auto;
-    flex-basis: 100%;
-  }
-  .header-area .main-nav .logo {
-    position: absolute;
-    left: 30px;
-    top: 0px;
-  }
-  .background-header .main-nav .logo {
-    top: 0px;
-  }
-  .header-area.header-sticky .nav li a:hover,
-  .header-area.header-sticky .nav li a.active {
-    color: #ee626b!important;
-    opacity: 1;
-  }
-  .header-area .nav li:last-child a {
-    background-color: transparent !important;
-    font-weight: 300 !important;
-    text-transform: capitalize !important;
-  }
-  .header-area {
-    background-color: transparent;
-    padding: 0px 15px;
-    height: 80px;
-    box-shadow: none;
-    text-align: center;
-  }
-  .header-area .container {
-    padding: 0px;
-  }
-  .header-area .logo {
-    margin-left: 0px;
-    margin-top: 30px;
-  }
-  .header-area .menu-trigger {
-    display: block !important;
-  }
-  .header-area .main-nav {
-    overflow: hidden;
-  }
-  .header-area .main-nav .nav {
-    float: none;
-    width: 100%;
-    display: none;
-    -webkit-transition: all 0s ease 0s;
-    -moz-transition: all 0s ease 0s;
-    -o-transition: all 0s ease 0s;
-    transition: all 0s ease 0s;
-    margin-left: 0px;
-  }
-  .header-area .main-nav .nav li:first-child {
-    border-top: 1px solid #eee;
-  }
-  .header-area.header-sticky .nav {
-    margin-top: 100px !important;
-  }
-  .background-header.header-sticky .nav {
-    margin-top: 80px !important;
-  }
-  .header-area .main-nav .nav li {
-    width: 100%;
-    background: #fff;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-  
 }
 
 /* 
@@ -475,34 +234,25 @@ Banner Style
   margin-bottom: 40px;
 }
 
+.main-banner .caption p {
+  color: #fff;
+}
 .main-banner .caption h2:after {
   position: absolute;
   background-image: url(../images/caption-dec.png);
   width: 202px;
   height: 12px;
-  content: '';
+  content: "";
   left: 125px;
   bottom: 0;
 }
 
-.main-banner .caption p {
-  color: #fff;
-  margin-bottom: 70px;
-}
-
-.main-banner .caption form {
-  position: relative;
-  max-width: 450px;
-}
-/* This controls the header search field - MODIFIED*/
 form input {
-  display: inline-block;
   max-width: 450px;
-  width: 300px;
-  height: 40px;
+  width: 500px;
+  height: 50px;
   outline: none;
-  border-radius: 20px;
-  border-style: none;
+  border-radius: 25px;
   background-color: #fff;
   border: none;
   padding: 0px 25px;
@@ -511,11 +261,10 @@ form input {
 }
 
 form button {
-  display: inline-block;
   height: 50px;
   line-height: 50px;
   background-color: #ee626b;
-  color: #ffffff;
+  color: #fff;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 500;
@@ -525,13 +274,11 @@ form button {
   position: absolute;
   right: 0;
   top: 0;
-  transition: all .3s;
 }
 
 form button:hover {
   background-color: #0071f8;
 }
-
 
 /* 
 ---------------------------------------------
@@ -544,18 +291,12 @@ Trending Style
   text-align: right;
 }
 
-.trending .item  {
+.trending .item {
   background-color: #eeeeee;
   position: relative;
   overflow: hidden;
   border-radius: 25px;
   margin-bottom: 30px;
-}
-
-.trending .item .thumb {
-  position: relative;
-  border-radius: 25px;
-  overflow: hidden;
 }
 
 .trending .item .down-content {
@@ -564,7 +305,7 @@ Trending Style
 
 .trending .item .down-content span.category {
   font-size: 14px;
-  color: #e11c1c;
+  color: #7a7a7a;
   margin-bottom: 5px;
   display: inline-block;
 }
@@ -572,7 +313,6 @@ Trending Style
 .trending .item .down-content h4 {
   font-size: 17px;
   font-weight: 600;
-  transition: all .3s;
 }
 
 .trending .item .down-content a {
@@ -582,12 +322,11 @@ Trending Style
   line-height: 40px;
   width: 40px;
   height: 40px;
-  background-color: #eeeeee;
+  background-color: #ee626b;
   color: #fff;
   border-radius: 50%;
   right: 25px;
   bottom: 25px;
-  transition: all .3s;
 }
 
 .trending .item:hover .down-content h4 {
@@ -597,7 +336,6 @@ Trending Style
 .trending .item:hover .down-content a {
   background-color: #0071f8;
 }
-
 
 /* 
 ---------------------------------------------
@@ -625,7 +363,6 @@ footer p {
 
 footer p a {
   color: #fff;
-  transition: all .3s;
   position: relative;
   z-index: 3;
 }
@@ -633,7 +370,6 @@ footer p a {
 footer p a:hover {
   opacity: 0.75;
 }
-
 
 /* 
 ---------------------------------------------
@@ -670,7 +406,6 @@ Page Header Style
   margin-bottom: 20px;
 }
 
-
 /* 
 ---------------------------------------------
 Contact Page Style
@@ -689,6 +424,8 @@ Contact Page Style
 
 .contact-page .left-text p {
   margin-bottom: 50px;
+  color: #aaaaaa;
+  text-align: left;
 }
 
 .contact-page .left-text ul li {
@@ -714,7 +451,6 @@ Contact Page Style
 .contact-page .right-content {
   margin-left: 50px;
 }
-
 
 .contact-page .right-content form input {
   width: 100%;
@@ -752,7 +488,6 @@ Contact Page Style
   padding: 0px 25px;
   border: none;
   border-radius: 25px;
-  transition: all .3s;
 }
 
 .contact-page .right-content form button:hover {
@@ -761,11 +496,7 @@ Contact Page Style
 
 .contact-page fieldset {
   border: none;
-  padding: 0;
-  margin: 0;
-  min-width: 0;
 }
-
 
 /* -----------------------------------------
 Setting up the grid system for contact form
@@ -777,7 +508,7 @@ Setting up the grid system for contact form
   margin-left: auto;
   padding-right: 15px;
   padding-left: 15px;
-  max-width: 1200px; 
+  max-width: 1200px;
 }
 
 .row {
@@ -796,37 +527,19 @@ Setting up the grid system for contact form
   box-sizing: border-box;
 }
 
-.col-12 {
+.col-lg-6 {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+.col-lg-6 p {
+  flex: 0 0 50%;
+  color: #000;
+  text-align: left;
+}
+
+.col-lg-12 {
   flex: 0 0 100%;
   max-width: 100%;
-}
-
-@media (min-width: 768px) {
-  .col-md-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-}
-
-@media (min-width: 992px) {
-  .col-lg-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
-  }
-
-  .col-lg-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-
-  .col-lg-12 {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
-}
-
-.align-self-center {
-  align-self: center;
 }
 
 /* -----------------------------------------
@@ -834,100 +547,156 @@ Guess a number  game
 ----------------------------------------- */
 
 html {
-    font-family: sans-serif;
+  font-family: sans-serif;
 }
 
 body {
-    width: 100%;
-    max-width: 2000px;
-    min-width: 480px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 2000px;
+  min-width: 480px;
+  margin: 0 auto;
 }
 
 .lastResult {
-    color: white;
-    padding: 7px;
+  color: white;
+  padding: 7px;
 }
 
 .guesses {
-    color: white;
-    padding: 7px;
+  color: white;
+  padding: 7px;
 }
-/* This controls the header button field - MODIFIED*/
+
 button {
-    background-color: purple;
-    color: #fff;
-    width: 125px;
-    height: 40px;
-    border-radius: 20px;
-    font-size: 14px;
-    border-style: none;
-    /* margin-top: 10px;  */
-    /* margin-left: 50px; */
+  background-color: purple;
+  color: #fff;
+  width: 250px;
+  height: 50px;
+  border-radius: 25px;
+  font-size: 30px;
+  border-style: none;
+  margin-top: 30px;
+  /* margin-left: 50px; */
 }
 
 #subt {
-    background-color: yellow;
-    color: #000;
-    width: 350px;
-    height: 50px;
-    border-radius: 25px;
-    font-size: 30px;
-    border-style: none;
-    margin-top: 50px;
-    /* margin-left: 75px; */
+  background-color: yellow;
+  color: #000;
+  width: 350px;
+  height: 50px;
+  border-radius: 25px;
+  font-size: 30px;
+  border-style: none;
+  margin-top: 50px;
+  /* margin-left: 75px; */
 }
 
 #guessField {
-    color: #000;
-    width: 550px;
-    height: 50px;
-    font-size: 25px;
-    border-style: none;
-    margin-top: 25px;
-    font-size: 45px;
-    /* margin-left: 50px; */
-    border: 5px solid #14727d;
-    text-align: center;
+  color: #000;
+  width: 550px;
+  height: 50px;
+  font-size: 25px;
+  border-style: none;
+  margin-top: 25px;
+  font-size: 45px;
+  /* margin-left: 50px; */
+  border: 5px solid #14727d;
+  text-align: center;
 }
 
 #guess {
-    font-size: 55px;
-    /* margin-left: 90px; */
-    margin-top: 120px;
-    color: #fff;
+  font-size: 55px;
+  /* margin-left: 90px; */
+  margin-top: 120px;
+  color: #fff;
 }
 
 .guesses {
-    background-color: #4d2bf8;
-    height: 20px;
+  background-color: #4d2bf8;
+  height: 20px;
 }
 
 #wrapper {
-    box-sizing: border-box;
-    background-image: url(../images/gan_background.jpg);
-    text-align:center;
-    width: 750px;
-    height: 650px;
-    color: #fff;
-    font-size: 30px;
+  box-sizing: border-box;
+  background-image: url(../images/gan_background.jpg);
+  text-align: center;
+  width: 750px;
+  height: 650px;
+  color: #fff;
+  font-size: 30px;
 }
 
 h1 {
-    background-color: #7b3056;
-    color: #fff;
-    text-align: center;
-    width: 100%;
-    margin: 0 auto;
+  background-color: #7b3056;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
 }
 
 p {
-    font-size: 50px;
-    text-align: center;
+  font-size: 50px;
+  text-align: center;
 }
 
 p {
-    font-size: 20px;
-    color: #fff;
+  font-size: 20px;
+  color: #fff;
 }
 
+/* -----------------------------------------
+Tic-Tac-Toe
+----------------------------------------- */
+
+body {
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.game {
+  width: 60vmin;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5vmin;
+  justify-content: center;
+}
+.box {
+  height: 18vmin;
+  width: 18vmin;
+  border-radius: 1rem;
+  border: none;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+  font-size: 8vmin;
+  color: red;
+  background-color: #4d2bf8;
+}
+#reset {
+  font-size: 1.25rem;
+  background: #191913;
+  color: white;
+  border: none;
+}
+.box:hover {
+  background-color: #0071f8;
+}
+#new-btn {
+  font-size: 1.25rem;
+  background: #191913;
+  color: white;
+  border: none;
+}
+#msg {
+  font-size: 2rem;
+  color: black;
+}
+.msg-container {
+  height: 30vmin;
+}
+
+.hide {
+  display: none;
+}
